<resources>
    <string name="app_name">Prueba Certificación</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sin_descripcion">Sin</string>
    <string name="contactar_para_votacion">Contactar para votación</string>
    <string name="imagen_del_detalle">Imagen del detalle</string>
    <string name="origen">Origen: %s</string>
    <string name="poder">Poder: %s</string>
    <string name="creacion">Creación: %s</string>
    <string name="color">Color: %s</string>
    <string name="traduccion">Traducción: %s</string>
    <string name="super_heroe">LLANERO SOLITARIO</string>
    <string name="con_traduccion">Cuenta con traducción al español</string>
    <string name="sin_traduccion">Sin traducción</string>
    <string name="email_body_template">Hola\n\nQuiero que el siguiente super héroe %1$s aparezca, en la nueva edición de biografías animadas. \nNúmero contacto:___________\n\nGracias.</string>

</resources>